--- a/ionic.config.json
+++ b/ionic.config.json
@@ -3,7 +3,8 @@
   "app_id": "53df46ce",
   "type": "ionic1",
   "integrations": {
-    "gulp": {}
+    "gulp": {},
+    "cordova": {}
   },
   "watchPatterns": [
     "scss/**/*",
