--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BeOnTime",
+  "name": "Ca vient de la rue",
   "version": "0.0.1",
   "description": "An Ionic project",
   "devDependencies": {
@@ -21,11 +21,12 @@
     ]
   },
   "dependencies": {
+    "cordova-android": "~6.3.0",
     "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-request-location-accuracy": "^2.2.2",
     "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-android": "~6.3.0"
+    "cordova-plugin-whitelist": "^1.3.3"
   }
 }
